blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: rg.fr-par.scw.cloud/namespace-aial/blog:v0.0.1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: scw-registry
