blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - z0057393.com
      secretName: letsencrypt-prod-pub

  rules:
    - host: z0057393.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  number: 80
